--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bootstrap": "^5.3.0",
     "cloudinary": "^1.37.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.0.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -24,6 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
