cart page and calculations

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fastcinema",
+  "name": "seacinema",
   "version": "1.0.0",
   "description": "simple online ticket booking website",
   "main": "index.js",
