--- a/package.json
+++ b/package.json
@@ -1,13 +1,4 @@
 {
-  "name": "seacinema",
-  "version": "1.0.0",
-  "description": "simple online ticket booking website",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "achmadaffandifauzan",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
@@ -28,5 +19,14 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "sanitize-html": "^2.11.0"
-  }
+  },
+  "name": "seacinema",
+  "version": "1.0.0",
+  "description": "simple online ticket booking website",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "author": "achmadaffandifauzan",
+  "license": "ISC"
 }
