--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "pm2": "^5.3.0",
     "sanitize-html": "^2.11.0"
   },
   "name": "seacinema",
@@ -25,7 +26,8 @@
   "description": "simple online ticket booking website",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "cluster": "pm2 start app.js"
   },
   "author": "achmadaffandifauzan",
   "license": "ISC"
